[package]
name = "cx"
version = "0.1.0"
authors = ["tmtmtoo <tmtmt2209@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A simple command executor utility."
repository = "https://github.com/tmtmtoo/cx"
homepage = "https://github.com/tmtmtoo/cx"
readme = "README.md"
categories = ["command-line-interface", "command-line-utilities"]
keywords = ["process", "supervisor", "retry", "parallel"]

[badges]
github = { repository = "tmtmtoo/cx", workflow = "Rust" }

[dependencies]
derive-new = "0.6.0"
derive-getters = "0.3.0"
anyhow = "1.0.78"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros", "time", "process", "io-util", "io-std"] }
async-trait = "0.1.76"
futures = "0.3.30"
structopt = "0.3.26"

[dev-dependencies]
assert_cmd = "1.0.1"
futures-lite = "2.1.0"
lite-async-test = "0.1.2"
predicates = "1.0.5"
